--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "css-loader": "^4.3.0",
+    "gh-pages": "^3.1.0",
+    "style-loader": "^1.2.1"
   }
 }
