--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,23 +3,18 @@
   "name": "meilin cui's website",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo32.png",
-      "type": "image/png",
-      "sizes": "32x32"
-    },
-    {
-      "src": "logo150.png",
-      "type": "image/png",
-      "sizes": "150x150"
+      "src": "android-chrome-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff"
 }
