--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cuimeilin.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://cuimeilin.github.io",
+  "homepage": "http://cuimn.github.io",
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
