--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cuimeilin.github.io",
+  "name": "cuimn.github.io",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://cuimn.github.io",
